# graphql

./: .gitignore  pyproject.toml  requiriment.txt  seed.py
app/: app.py  firebase_conf.py  schema.py
